testing/framework/resources/Advanced/Failing/mondrian/query6552.q
select  time_by_day.the_year as c0,  time_by_day.quarter as c1,  time_by_day.month_of_year as c2,  customer.customer_id as c3,  sum(sales_fact_1997.unit_sales) as m0 from  time_by_day as time_by_day,  sales_fact_1997 as sales_fact_1997,  customer as customer where  sales_fact_1997.time_id = time_by_day.time_id and  time_by_day.the_year = 1997 and  time_by_day.quarter in ('Q1', 'Q2') and  time_by_day.month_of_year in (2, 3, 4, 5) and  sales_fact_1997.customer_id = customer.customer_id and  customer.customer_id in (448, 587, 602, 617, 770, 930, 1145, 1168, 1245, 1337, 1470, 2059, 2084, 2211, 2244, 2295, 2390, 2511, 2636, 2918, 3231, 3245, 3310, 3397, 3470, 3773, 3838, 3976, 4099, 4231, 4315, 4340, 4497, 4649, 4657, 4873, 5026, 5050, 5219, 5379, 5984, 6372, 6499, 6589, 6666, 6681, 6683, 6854, 6866, 7059, 7100, 7141, 7275, 7556, 7589, 7607, 7713, 7720, 7920, 7989, 8059, 8074, 8089, 8181, 8199, 8241, 8254, 8359, 8442, 8472, 8617, 8777, 8794, 8840, 8887, 8963, 8994, 9064, 9187, 9194, 9461, 9555, 9564, 9715, 9837, 10091, 10116, 10243, 10250, 10273) group by  time_by_day.the_year,  time_by_day.quarter,  time_by_day.month_of_year,  customer.customer_id;
